--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Run pipeline
         env:
           AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
-        run: python scripts/transform.py data.csv
+        run: python scripts/transform.py 
